--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MyViewActivity"></activity>
+        <activity android:name=".MyRecyclerView"></activity>
+        <activity android:name=".MyViewActivity" />
         <activity android:name=".MoveWithDataActivity" />
         <activity android:name=".MoveActivity" />
         <activity android:name=".MainActivity">
